# g-dup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  DOCS_INDEX.md  LICENSE  LINUX_INSTALL.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_README.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  VISUAL_GUIDE.md  build_deb.py  build_linux.py  build_linux_release.sh  build_windows.py  dev.bat  dev.sh  install-linux.sh  n8n_tele_data.xlsx  pyproject.toml  requirements.txt
dup/: __init__.py  __main__.py  auth.py  cli.py  config.py  credentials.json.example  drive.py
dup/commands/: __init__.py  cd.py  download.py  link.py  ls.py  pwd.py  tree.py  upload.py
installer/: windows.iss
